# politipo

./: .ccignore  .gitignore  .pre-commit-config.yaml  ABOUT_POLITIPO.md  AGENTS.md  Makefile  README.md  debug_constraints.py  debug_constraints.txt  example_output.txt  main.py  pandera_types.py  pydantic_imports.txt  pydantic_test.py  pyproject.toml  simple_test.py  test_output.py  test_pandera.py  test_results.txt  ty.toml
.github/workflows/: ci.yml  publish.yml
.specstory/: .what-is-this.md
.specstory/history/: 2025-03-21_21-16-running-pytest-for-troubleshooting.md  2025-03-21_22-01-file-renaming-and-update-instructions.md  2025-03-24_21-17-pandera-integration-in-politipo-library.md  2025-03-24_22-02-pydantic-implementation-and-test-coverage-review.md  2025-03-25_15-12-implementing-a-type-system-step-by-step.md  2025-03-25_23-42-implementing-core-constraints-in-politipo.md  2025-03-26_01-56-enhancing-type-mapping-in-politipo.md  2025-03-26_03-32-console-output-assistance.md  2025-03-26_03-44-refactoring-conversion-engine-and-strategies.md  2025-03-26_12-40-sqlalchemy-conversion-strategies-implementation.md  2025-03-28_15-54-code-analysis-and-output-review.md  2025-03-28_16-14-refining-create-model-instance-for-efficiency.md
legacy/: ABOUT_POLITIPO.md  README_legacy.md  debug_constraints.py  debug_constraints.txt  main.py  pydantic_imports.txt  pydantic_test.py  simple_test.py  simple_test_results.txt  test_output.py  test_pandera.py
legacy/old_tests/: __init__.py  conftest.py  test_pydantic_pandera.py  test_type_converter.py  test_type_mapper.py
legacy/politipo/: __init__.py  schema_tools.py  type_converter.py  type_mapper.py
legacy/politipo/core/: errors.py
legacy/politipo/core/conversion/: __init__.py  context.py  engine.py  graph.py  strategy.py
legacy/politipo/core/conversion/strategies/: __init__.py  base.py  dict_to_model.py  (+10 more)
legacy/politipo/core/types/: __init__.py  abstract.py  canonical.py  constraints.py  protocols.py
legacy/politipo/core/utils/: __init__.py  pydantic.py
legacy/politipo/plugins/: __init__.py
legacy/politipo/plugins/pandas/: __init__.py  types.py
legacy/politipo/plugins/pandera/: __init__.py  types.py
legacy/politipo/plugins/polars/: __init__.py  types.py
legacy/politipo/plugins/pydantic/: __init__.py  types.py
legacy/politipo/plugins/python/: __init__.py  types.py
legacy/politipo/plugins/sqlalchemy/: __init__.py  model_types.py  types.py
legacy/politipo/plugins/sqlmodel/: __init__.py  types.py
legacy/politipo/utils/: __init__.py  pydantic_version.py
old_tests/: __init__.py  test_type_converter.py
politipo/: __init__.py  politipo.py  schema_tools.py  test_pandera_integration.py  test_politipo.py  test_type_converter.py  test_type_mapper.py  test_type_mapper_detect.py  type_converter.py  type_mapper.py
politipo/core/: errors.py
politipo/core/conversion/: __init__.py  context.py  engine.py  graph.py  strategy.py
politipo/core/conversion/strategies/: __init__.py  base.py  dict_to_model.py  dict_to_sqlalchemy_model.py  list_to_pandas.py  list_to_polars.py  model_to_dict.py  model_to_sqlalchemy_model.py  pandas_to_model_list.py  pandas_to_pydantic.py  polars_to_list.py  sqlalchemy_model_to_dict.py  sqlalchemy_model_to_model.py
politipo/core/conversion/utils/: __init__.py  instantiation.py
politipo/core/types/: __init__.py  abstract.py  canonical.py  constraints.py  protocols.py
politipo/core/utils/: __init__.py  pydantic.py
politipo/examples/: pandera_example.py
politipo/plugins/: __init__.py
politipo/plugins/pandas/: __init__.py  types.py
politipo/plugins/pandera/: __init__.py  types.py
politipo/plugins/polars/: __init__.py  types.py
politipo/plugins/pydantic/: __init__.py  types.py
politipo/plugins/python/: __init__.py  types.py
politipo/plugins/sqlalchemy/: __init__.py  model_types.py  types.py
politipo/plugins/sqlmodel/: __init__.py  types.py
politipo/utils/: __init__.py  pydantic_version.py
src/: politipo.py  test_enhanced_transporter.py  test_politipo.py  test_politipo_ux.py  test_robustness.py  test_v040_refactor.py
tests/: conftest.py  test_pydantic_pandera.py  test_type_converter.py  test_type_mapper.py
(+2 files in other folders)
