[project]
name = "politipo"
version = "0.1.5"
description = "A library for seamless type conversions between Python data structures and models."
authors = [{ name = "Kevin Saltarelli", email = "kevinqz@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pandera>=0.23.1",
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "black>=24.0.0",
    "ty==0.0.1a27",
    "pre-commit>=3.7.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pyarrow>=22.0.0",
    "polars>=1.35.2",
    "duckdb>=1.4.2",
]

[tool.uv]
# No custom fields; reserved for future uv settings.

[tool.ruff]
line-length = 100
extend-exclude = [
    "legacy",
]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]

[tool.black]
line-length = 100
