[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "politipo"
version = "0.1.5"
description = "A library for seamless type conversions between Python data structures and models."
authors = [{ name = "Kevin Saltarelli", email = "kevinqz@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10.6",
]

[project.optional-dependencies]
arrow = ["pyarrow>=22.0.0"]
polars = ["polars>=1.35.2"]
duckdb = ["duckdb>=1.4.2"]
validation = ["pandera>=0.23.1"]
pandas = ["pandas>=2.2.3"]
sqlalchemy = ["sqlalchemy>=2.0.0"]
# convenience extra
all = [
    "pyarrow>=22.0.0",
    "polars>=1.35.2",
    "duckdb>=1.4.2",
    "pandera>=0.23.1",
    "pandas>=2.2.3",
    "sqlalchemy>=2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "black>=24.0.0",
    "ty==0.0.1a27",
    "pre-commit>=3.7.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pyarrow>=22.0.0",
    "polars>=1.35.2",
    "duckdb>=1.4.2",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["politipo"]

[tool.uv]
# No custom fields; reserved for future uv settings.

[tool.ruff]
line-length = 100
extend-exclude = [
    "legacy",
]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]

[tool.black]
line-length = 100
