[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "politipo"
version = "0.4.1"
description = "PolyType: Pydantic → Arrow → DuckDB/Polars with vectorized validation (Pandera)."
authors = [{ name = "Kevin Saltarelli", email = "kevinqz@gmail.com" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "pydantic>=2.10.6",
]

[project.optional-dependencies]
arrow = ["pyarrow>=22.0.0"]
polars = ["polars>=1.35.2"]
duckdb = ["duckdb>=1.4.2"]
validation = ["pandera>=0.24.0"]
pandas = ["pandas>=2.2.3"]
sqlalchemy = ["sqlalchemy>=2.0.0"]
# convenience extra
all = [
    "pyarrow>=22.0.0",
    "polars>=1.35.2",
    "duckdb>=1.4.2",
    "pandera>=0.24.0",
    "pandas>=2.2.3",
    "sqlalchemy>=2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "black>=24.0.0",
    "ty==0.0.1a27",
    "pre-commit>=3.7.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.95.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["politipo"]

[tool.uv]
# Reserved for future uv settings (no custom fields for now)

[tool.ruff]
line-length = 100
extend-exclude = [
    "legacy",
    "backups",
    ".specstory",
]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]

[tool.black]
line-length = 100
target-version = ["py313"]
extend-exclude = "(legacy|backups|\\.specstory)/"

[tool.pytest.ini_options]
testpaths = ["src"]
addopts = "-ra --strict-markers --maxfail=1 --cov=src --cov-report=term-missing --cov-fail-under=97"
filterwarnings = [
    "ignore:the physical Categorical ordering is deprecated:DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == \"__main__\":",
    # Exclude abstract method ellipsis definitions
    '^\\s*def\\s+\\w+\\(.*\\)\\s*->.*:\\s*\\.\\.\\.$',
    "if TYPE_CHECKING:",
]
